# openid4vc-backend

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: base.toml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
migrations/: 001_admin_schema.sql  002_tenant_schema.sql  003_admin_keys.sql  004_tenant_credential_lifecycle.sql  005_admin_auth_audit.sql
policy/: authorization.polar
scripts/: OpenID4VC-Backend.postman_collection.json  README.md  curl-commands.sh  e2e-flow.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: api_key.rs  authorization.rs  jwt.rs  middleware.rs  mod.rs
src/idv/: mod.rs
src/routes/: audit.rs  did.rs  health.rs  issuer.rs  keys.rs  metrics.rs  mod.rs  openid4vci.rs  tenant.rs  verifier.rs
src/services/: audit.rs  did_resolver.rs  key_management.rs  metrics.rs  mod.rs  oid4vci_runtime.rs  revocation.rs  tenant_db.rs  webhook.rs
src/tenant/: mod.rs
