[package]
name = "openid4vc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dashmap = "6.1"
did-key = "0.2"
dotenvy = "0.15"
futures = "0.3"
http = "1.1"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "9.3"
oso = "0.27"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "1.0"
tokio = { version = "1.46", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

# Local OpenID4VC crates
oid4vc-manager = { path = "../openid4vc/oid4vc-manager" }
oid4vc-core = { path = "../openid4vc/oid4vc-core" }
oid4vci = { path = "../openid4vc/oid4vci" }
oid4vp = { path = "../openid4vc/oid4vp" }
siopv2 = { path = "../openid4vc/siopv2" }

[dev-dependencies]
tokio-test = "0.4"
