[package]
name = "openid4vc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dashmap = "6.1"
did-key = "0.2"
dotenvy = "0.15"
futures = "0.3"
http = "1.1"
hmac = "0.12"
hex = "0.4"
jsonwebtoken = "9.3"
oso = "0.27"
once_cell = "1.19"
prometheus = "0.13"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "1.0"
tokio = { version = "1.46", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4", "serde"] }

# OpenID4VC crates pinned to sudilate/openid4vc
oid4vc-manager = { git = "https://github.com/sudilate/openid4vc", rev = "7bb7d529acb4e9b6919d3e07e4ddbcda71b91a6b" }
oid4vc-core = { git = "https://github.com/sudilate/openid4vc", rev = "7bb7d529acb4e9b6919d3e07e4ddbcda71b91a6b" }
oid4vci = { git = "https://github.com/sudilate/openid4vc", rev = "7bb7d529acb4e9b6919d3e07e4ddbcda71b91a6b" }
oid4vp = { git = "https://github.com/sudilate/openid4vc", rev = "7bb7d529acb4e9b6919d3e07e4ddbcda71b91a6b" }
siopv2 = { git = "https://github.com/sudilate/openid4vc", rev = "7bb7d529acb4e9b6919d3e07e4ddbcda71b91a6b" }

[dev-dependencies]
tokio-test = "0.4"

[patch.'https://github.com/iotaledger/identity']
identity_core = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_credential = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_did = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_document = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_iota = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_jose = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_storage = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_verification = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_ecdsa_verifier = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }
identity_eddsa_verifier = { git = "https://github.com/impierce/identity.rs", rev = "0422797b" }

[patch.crates-io]
sd-jwt = { git = "https://github.com/impierce/sd-jwt-payload", rev = "f28789a", package = "sd-jwt-payload" }
